--- a/front/src/Styles/client/createMission.css
+++ b/front/src/Styles/client/createMission.css
@@ -18,6 +18,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(8px);
     z-index: 9999;
+    pointer-events: none;
   }
   
   /* Modal container - completely separate from the blurred background */
@@ -64,10 +65,10 @@
   padding: 0rem 0rem 0rem 0rem;
   width: 90%;
   max-width: 600px;
-  height: 85%; /* Limit max height */
+  height: 92%; /* Limit max height */
   overflow-y: auto; /* Add scrolling if needed */
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  z-index: 1001;
+ z-index: 10000;
   overflow-x: hidden;
   
   /* Custom scrollbar styling */
@@ -84,10 +85,11 @@
   padding: 0rem 0rem 0rem 0rem;
   width: 90%;
   max-width: 600px;
-  height: 85%; /* Limit max height */
+  height: 92%; /* Limit max height */
   overflow-y: auto; /* Add scrolling if needed */
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  z-index: 10000;
+    pointer-events: auto !important;
+  z-index: 2147483647 !important;
   overflow-x: hidden;
   
   /* Custom scrollbar styling */
