--- a/src/Styles/layout.css
+++ b/src/Styles/layout.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     margin-left: 0.5rem;
+    flex-direction: column; 
+
   }
   
   .profile-picture-wrapper {
